# MCUFriendlyMamba

./: .gitattributes  .gitignore  esp32_har_inference.cpp  requirements.txt
MCU-Mamba/: brevitas_custom_layers.py  data.py  mamba_raw.py  models.py  train.py  train_commands.txt
MambaLite-Micro/: LICENSE  README.md  requirements.txt
env_setup/: requirements.txt  setup.sh  torch_amd_install.txt  torch_amd_install_2.8.txt
esp_tflite/: .gitignore  CMakeLists.txt  README.md  (+3 more)
esp_tflite/components/audio_process/: CMakeLists.txt  _CMakeLists.txt  audio_preprocessor_float_model_data.cc  audio_provider.cc  feature_provider.cc  main_functions.cc  micro_features_generator.cc
esp_tflite/components/audio_process/include/: audio_preprocessor_float_model_data.h  feature_provider.h  kws_test_samples.h  micro_features_generator.h
esp_tflite/components/models/: CMakeLists.txt
esp_tflite/components/models/audio_process/: audio_preprocessor_float_model_data.cc
esp_tflite/components/models/full_har_inference/: model_full_har_model_data.cc  model_full_int8_har_model_data.cc
esp_tflite/components/models/full_har_inference/include/: model_float_model_data.h  model_full_har_model_data.h
esp_tflite/components/models/split_har_inference/: model_post_ssm_har_model_data.cc  model_post_ssm_int8_har_model_data.cc  model_post_ssm_int8_model_data.cc  model_pre_ssm_har_model_data.cc  model_pre_ssm_int8_har_model_data.cc  model_step_ssm_har_model_data.cc  model_step_ssm_int8_har_model_data.cc  model_step_ssm_int8_model_data.cc  model_step_ssm_model_data.cc
esp_tflite/components/models/split_har_inference/include/: model_post_ssm_har_model_data.h  model_post_ssm_int8_har_model_data.h  model_post_ssm_int8_model_data.h  model_post_ssm_model_data.h  model_pre_ssm_har_model_data.h  model_pre_ssm_int8_har_model_data.h  model_step_ssm_har_model_data.h  model_step_ssm_int8_har_model_data.h  model_step_ssm_int8_model_data.h
esp_tflite/components/models/split_kws_inference/: model_post_ssm_int8_kws_model_data.cc  model_post_ssm_kws_model_data.cc  model_pre_ssm_int8_kws_model_data.cc  model_pre_ssm_kws_model_data.cc  model_step_ssm_int8_kws_model_data.cc  model_step_ssm_kws_model_data.cc
esp_tflite/components/models/split_kws_inference/include/: model_post_ssm_int8_kws_model_data.h  model_post_ssm_kws_model_data.h  model_pre_ssm_int8_kws_model_data.h  model_pre_ssm_kws_model_data.h  model_step_ssm_int8_kws_model_data.h  model_step_ssm_kws_model_data.h
esp_tflite/main/: CMakeLists.txt  Kconfig.projbuild  full_model_inference.cc  full_model_inference.h  har_test_samples.h  idf_component.yml  main.cc  model_float_model_data.cc  model_float_model_data.h  model_int8_model_data.cc  model_int8_model_data.h  model_post_ssm_int8_model_data.cc  model_post_ssm_int8_model_data.h  model_post_ssm_model_data.cc  model_post_ssm_model_data.h  model_pre_ssm_int8_model_data.cc  model_pre_ssm_int8_model_data.h  model_pre_ssm_model_data.cc  model_pre_ssm_model_data.h  model_step_ssm_int8_model_data.cc  model_step_ssm_int8_model_data.h  model_step_ssm_model_data.cc  model_step_ssm_model_data.h  profiler.h  run_inference.cc  run_inference.h  split_model_inference.cc
(+270 files in other folders)
